--- a/src/assets/styles/base/_typo.sass
+++ b/src/assets/styles/base/_typo.sass
@@ -13,8 +13,13 @@ p
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6
   margin: 3rem 0 1.38rem
   font-family: $ff-heading
-  font-weight: $fw-700
   color: $c-text-heading
+
+  +until($tablet)
+    font-weight: $fw-600
+    
+  +from($tablet)  
+    font-weight: $fw-700
 
 h1, .h1
   margin-top: 0
